# Life

./: LICENSE  Life.cabal  README.md
src/: Main.hs
src/Life/: Model.hs  Simulation.hs  View.hs
