name:                Life
version:             0.1.0.0
synopsis:            A simplistic "life" simulation.
-- description:
homepage:            https://github.com/kinghajj/Life
license:             BSD3
license-file:        LICENSE
author:              Samuel Fredrickson
maintainer:          kinghajj@gmail.com
copyright:           (C) 2013 Samuel Fredrickson
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10

executable Life
  main-is:           Main.hs
  other-modules:     Life.Model, Life.Simulation, Life.View
  build-depends:     base ==4.5.*, mtl >=2.1, containers >=0.4, lens >=3.8,
                     gloss >=1.7
  buildable:         True
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -O2 -funbox-strict-fields -threaded -rtsopts

source-repository head
  type: git
  location: git@github.org:kinghajj/Life.git
